# ace411_sudoku

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  Makefile.toml  README.md  avr.py  build_docker.sh  run.sh
.github/workflows/: rust.yml
src/: lib.rs  main.rs  sudoku_avr.rs  sudoku_lib.rs
