[package]
name = "ace411_sudoku"
version = "1.6.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pad = "0.1.6"
sudoku = "0.7.0"
anyhow = "1.0.44"
serialport = "4.0.1"
colored = "2.0.0"
log = "0.4.14"
simplelog = "0.10.2"
rand = "0.8.4"
structopt = "0.3.23"
clap = "2.33.3"
strum = "0.22"
strum_macros = "0.22"
