[package]
name = "ace411_sudoku"
version = "1.7.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pad = "0.1.6"
sudoku = "0.7.0"
anyhow = "1.0.52"
serialport = "4.0.1"
colored = "2.0.0"
log = "0.4.14"
simplelog = "0.11.1"
rand = "0.8.4"
structopt = "0.3.25"
clap = "3.0.5"
strum = "0.23.0"
strum_macros = "0.23.1"
